--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "fourdollar.js",
   "version": "0.1.3",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "mocha": "^2.3.4"
+  }
 }
