--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.3",
   "dependencies": {},
   "devDependencies": {
+    "fs-extra": "^0.26.3",
+    "gulp": "^3.9.0",
+    "gulp-spawn-mocha": "^2.2.1",
     "mocha": "^2.3.4"
   }
 }
